WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
135392
REGRESSION [WebKit2 iOS]: Cannot add shortcut to user dictionary from non editable content
https://bugs.webkit.org/show_bug.cgi?id=135392
Summary
REGRESSION [WebKit2 iOS]: Cannot add shortcut to user dictionary from non edi...
Enrica Casucci
Reported
2014-07-29 12:39:36 PDT
This is currently implemented for editable content. It should work for both. <
rdar://problem/17760073
>
Attachments
Patch
(2.01 KB, patch)
2014-07-29 12:42 PDT
,
Enrica Casucci
benjamin
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-12 for mac-mountainlion-wk2
(483.10 KB, application/zip)
2014-07-29 15:44 PDT
,
Build Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Enrica Casucci
Comment 1
2014-07-29 12:42:35 PDT
Created
attachment 235698
[details]
Patch
Build Bot
Comment 2
2014-07-29 15:44:17 PDT
Comment on
attachment 235698
[details]
Patch
Attachment 235698
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/6332538612088832
New failing tests: media/track/add-and-remove-track.html
Build Bot
Comment 3
2014-07-29 15:44:19 PDT
Created
attachment 235704
[details]
Archive of layout-test-results from webkit-ews-12 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-12 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Enrica Casucci
Comment 4
2014-07-29 17:18:23 PDT
Committed revision 171782.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug