REGRESSION [WebKit2 iOS]: Cannot add shortcut to user dictionary from non editable content. https://bugs.webkit.org/show_bug.cgi?id=135392 <rdar://problem/17760073>

Reviewed by Benjamin Poulain.

Adding a shortcut to the user dictionary needs to be available in non editable content too.

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView _addShortcut:]):



Canonical link: https://commits.webkit.org/153285@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@171782 268f45cc-cd09-0410-ab3c-d52691b4dbfc